[package]
name = "bladeball"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
mki = "0.2.3"
screenshots = "0.8.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
sysinfo = "0.29.11"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
] }
winit = "0.29.4"
